Added topic to blog

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Blog Title</title>
+    <title>Blog</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
@@ -21,8 +21,8 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title">Blog</h1>
-        <p class="lead blog-description">A blog.</p>
+        <h1 class="blog-title">The Seven Wonders of the World</h1>
+        <p class="lead blog-description">Pictures and descriptions of each of the seven wonders of the world.</p>
       </div>
 
       <div class="row">
@@ -49,13 +49,19 @@
           <div class="sidebar-module">
             <h4>Archives</h4>
             <ol class="list-unstyled">
-              <li><a href="#">October 2014</a></li>
+              <li><a href="#">Wonder #1</a></li>
+              <li><a href="#">Wonder #2</a></li>
+              <li><a href="#">Wonder #3</a></li>
+              <li><a href="#">Wonder #4</a></li>
+              <li><a href="#">Wonder #5</a></li>
+              <li><a href="#">Wonder #6</a></li>
+              <li><a href="#">Wonder #7</a></li>
             </ol>
           </div>
           <div class="sidebar-module">
             <h4>Links</h4>
             <ol class="list-unstyled">
-              <li><a href="#">GitHub</a></li>
+              <li><a href="http://www.github.com">GitHub</a></li>
             </ol>
           </div>
         </div><!-- /.blog-sidebar -->
