changed links to paragraphs

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="#"><strong>Blog</strong></a>
-          <a class="blog-nav-item" href="#">Something</a>
-          <a class="blog-nav-item" href="#">Something</a>
+          <p class="blog-nav-item active" href="#"><strong>Main Page</strong></p>
+          <p class="blog-nav-item">Wonder #1</p>
+          <p class="blog-nav-item">Wonder #2</p>
+          <p class="blog-nav-item">Wonder #3</p>
+          <p class="blog-nav-item">Wonder #4</p>
+          <p class="blog-nav-item">Wonder #5</p>
+          <p class="blog-nav-item">Wonder #6</p>
+          <p class="blog-nav-item">Wonder #7</p>
         </nav>
       </div>
     </div>
@@ -29,15 +34,8 @@
 
         <div class="col-sm-8 blog-main">
           <div class="blog-post">
-            <h2 class="blog-post-title">Post</h2>
+            <h2 class="blog-post-title">The Pyramids of Giza</h2>
             <p class="blog-post-meta">November 25, 2014 by Anonymous</p>
-            <p>Text.</p>
-            <hr>
-            <p>More text.</p>
-            <blockquote>
-              <p>Quote!</p>
-            </blockquote>
-            <p>Yet more text.</p>
           </div>
         </div><!-- /.blog-main -->
 
@@ -49,13 +47,7 @@
           <div class="sidebar-module">
             <h4>Archives</h4>
             <ol class="list-unstyled">
-              <li><a href="#">Wonder #1</a></li>
-              <li><a href="#">Wonder #2</a></li>
-              <li><a href="#">Wonder #3</a></li>
-              <li><a href="#">Wonder #4</a></li>
-              <li><a href="#">Wonder #5</a></li>
-              <li><a href="#">Wonder #6</a></li>
-              <li><a href="#">Wonder #7</a></li>
+              <li><a href="#">Pictures</a></li>
             </ol>
           </div>
           <div class="sidebar-module">
