added pages for each wonder

--- a/wonderSix.html
+++ b/wonderSix.html
@@ -11,13 +11,13 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="index.html" id="main"><strong>Main Page</strong></a>
+          <a class="blog-nav-item" href="index.html" id="main"><strong>Main Page</strong></a>
           <a class="blog-nav-item" href="wonderOne.html" id="wonderOne">Wonder #1</a>
           <a class="blog-nav-item" href="wonderTwo.html" id="wonderTwo">Wonder #2</a>
           <a class="blog-nav-item" href="wonderThree.html" id="wonderThree">Wonder #3</a>
           <a class="blog-nav-item" href="wonderFour.html" id="wonderFour">Wonder #4</a>
           <a class="blog-nav-item" href="wonderFive.html" id="wonderFive">Wonder #5</a>
-          <a class="blog-nav-item" href="wonderSix.html" id="wonderSix">Wonder #6</a>
+          <a class="blog-nav-item active" href="wonderSix.html" id="wonderSix">Wonder #6</a>
           <a class="blog-nav-item" href="wonderSeven.html" id="wonderSeven">Wonder #7</a>
         </nav>
       </div>
