--- a/wonderOne.html
+++ b/wonderOne.html
@@ -11,8 +11,8 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="index.html" id="main"><strong>Main Page</strong></a>
-          <a class="blog-nav-item" href="wonderOne.html" id="wonderOne">Wonder #1</a>
+          <a class="blog-nav-item" href="index.html" id="main"><strong>Main Page</strong></a>
+          <a class="blog-nav-item active" href="wonderOne.html" id="wonderOne">Wonder #1</a>
           <a class="blog-nav-item" href="wonderTwo.html" id="wonderTwo">Wonder #2</a>
           <a class="blog-nav-item" href="wonderThree.html" id="wonderThree">Wonder #3</a>
           <a class="blog-nav-item" href="wonderFour.html" id="wonderFour">Wonder #4</a>
