made each branch active

--- a/wonderFour.html
+++ b/wonderFour.html
@@ -26,8 +26,8 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title">The Seven Wonders of the World</h1>
-        <p class="lead blog-description">Pictures and descriptions of each of the seven wonders of the world.</p>
+        <h1 class="blog-title">Colosseum</h1>
+        <p class="lead blog-description">AD 700</p>
       </div>
 
       <div class="row">
