--- a/wonderOne.html
+++ b/wonderOne.html
@@ -26,8 +26,8 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title">The Seven Wonders of the World</h1>
-        <p class="lead blog-description">Pictures and descriptions of each of the seven wonders of the world.</p>
+        <h1 class="blog-title">Christ Redeemer</h1>
+        <p class="lead blog-description">AD 1931</p>
       </div>
 
       <div class="row">
@@ -37,6 +37,8 @@
             <h2 class="blog-post-title">Post Title</h2>
             <p class="blog-post-meta">November 25, 2014 by Anonymous</p>
           </div>
+          <div class="image">
+          	<img src=""
         </div><!-- /.blog-main -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
