--- a/wonderOne.html
+++ b/wonderOne.html
@@ -39,6 +39,7 @@
           </div>
           <div class="image">
           	<img src=""
+          </div>
         </div><!-- /.blog-main -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
