WonderSeven Added two images

--- a/wonderSeven.html
+++ b/wonderSeven.html
@@ -37,6 +37,10 @@
             <h2 class="blog-post-title">Post Title</h2>
             <p class="blog-post-meta">November 25, 2014 by Anonymous</p>
           </div>
+          <div class="image">
+          	<img src="http://upload.wikimedia.org/wikipedia/commons/a/aa/Taj_Mahal_East_Side.JPG"
+          	<img src="http://static.readwave.com/statics/cover/b53646880a32c87f/original.jpg?c9cd"
+          </div>
         </div><!-- /.blog-main -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
