--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2 class="blog-post-title">Post Title</h2>
             <p class="blog-post-meta">November 25, 2014 by Anonymous</p>
           </div>
-        </div><!-- /.blog-main -->
+        </div><!-- /.blog-main http://nmazour96.github.io/blog.  -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
