added facts and images to fourth wonder

--- a/wonderFour.html
+++ b/wonderFour.html
@@ -34,9 +34,45 @@
 
         <div class="col-sm-8 blog-main">
           <div class="blog-post">
-            <h2 class="blog-post-title">Post Title</h2>
-            <p class="blog-post-meta">November 25, 2014 by Anonymous</p>
+            <h2 class="blog-post-title">Fact #1</h2>
+            <p class="blog-post-meta">The Colosseum has remained the largest amphitheater in the world.</p>
           </div>
+          <div class="image">
+          	<img src="http://upload.wikimedia.org/wikipedia/commons/5/53/Colosseum_in_Rome,_Italy_-_April_2007.jpg" alt="colosseum at night">
+          </div>
+          <div class="line-separator"></div>
+          <div class="blog-post">
+            <h2 class="blog-post-title">Fact #2</h2>
+            <p class="blog-post-meta">The Colosseum in Rome has over 80 entrances and can accommodate about 50,000 spectators.</p>
+          </div>
+          <div class="image">
+          	<img src="http://upload.wikimedia.org/wikipedia/commons/3/38/Colosseum_0771_2013.jpg" alt="colosseum interior arena">
+          </div>
+          <div class="line-separator"></div>
+          <div class="blog-post">
+            <h2 class="blog-post-title">Fact #3</h2>
+            <p class="blog-post-meta">It is thought that over 500,000 people lost their lives and over a million wild animals were killed throughout the duration of the Colosseum hosted people vs. beast games.</p>
+          </div>
+          <div class="image">
+          	<img src="http://www.colosseum.net/images/listing_photos/4_colosseum_4.jpg" alt="colosseum arial">
+          </div>
+          <div class="line-separator"></div>
+          <div class="blog-post">
+            <h2 class="blog-post-title">Fact #4</h2>
+            <p class="blog-post-meta">All Ancient Romans had free entry to the Colosseum for events, and were also fed throughout the show.</p>
+          </div>
+          <div class="image">
+          	<img src="http://www.legionxxiv.org/colosseum/colosmodel2.jpg" alt="colosseum original">
+          </div>
+          <div class="line-separator"></div>
+          <div class="blog-post">
+            <h2 class="blog-post-title">Fact #5</h2>
+            <p class="blog-post-meta">The Colosseum in Italy only took 9 years to build using over 60,000 Jewish slaves.</p>
+          </div>
+          <div class="image">
+          	<img src="http://angeltours.eu/site_media/tours/Colosseum.JPG" alt="colosseum stands">
+          </div>
+          <div class="line-separator"></div>
         </div><!-- /.blog-main -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
