changed name back to fix error

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="mainPage.html" id="main"><strong>Main Page</strong></a>
+          <a class="blog-nav-item active" href="index.html" id="main"><strong>Main Page</strong></a>
           <a class="blog-nav-item" href="wonderOne.html" id="wonderOne">Wonder #1</a>
           <a class="blog-nav-item" href="wonderTwo.html" id="wonderTwo">Wonder #2</a>
           <a class="blog-nav-item" href="wonderThree.html" id="wonderThree">Wonder #3</a>
