--- a/wonderThree.html
+++ b/wonderThree.html
@@ -38,7 +38,7 @@
             <p class="blog-post-meta">Petra is home to over 800 carved tombs.</p>
           </div>
           <div class="image">
-          	<img src="http://www.revlocal.com/f/66455" alt="petra candles">
+          	<img src="http://holytur1.dominiotemporario.com/wintechi/imagens/jordania_icones/jordania_com_petra.jpg" alt="petra candles">
           </div>
           <div class="line-separator"></div>
           <div class="blog-post">
