fixed spacing error

--- a/wonderSeven.html
+++ b/wonderSeven.html
@@ -64,7 +64,8 @@
           <div class="image">
           <img src="http://www.mountainsoftravelphotos.com/India/Agra%20Taj%20Mahal/slides/Agra%20Taj%20Mahal%2025%20Taj%20Mahal%20Mausoleum%20Cenotaphs%20of%20Shah%20Jahan%20and%20Mumtaz%20Mahal.jpg" alt="TajPicFour">
           </div>
-           <div class="blog-post">
+          <div class="line-separator"></div>
+          <div class="blog-post">
             <h2 class="blog-post-title">Fact #5</h2>
             <p class="blog-post-meta">It is said that the death so crushed the Emperor that all his hair and beard were said to have grown snow white within just a few months.</p>
           </div>
