added files for facts and pictures archives

--- a/facts.html
+++ b/facts.html
@@ -1,4 +1,4 @@
-<!doctype html>
+!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
           <a class="blog-nav-item" href="wonderThree.html" id="wonderThree">Wonder #3</a>
           <a class="blog-nav-item" href="wonderFour.html" id="wonderFour">Wonder #4</a>
           <a class="blog-nav-item" href="wonderFive.html" id="wonderFive">Wonder #5</a>
-          <a class="blog-nav-item active" href="wonderSix.html" id="wonderSix">Wonder #6</a>
+          <a class="blog-nav-item" href="wonderSix.html" id="wonderSix">Wonder #6</a>
           <a class="blog-nav-item" href="wonderSeven.html" id="wonderSeven">Wonder #7</a>
         </nav>
       </div>
@@ -26,8 +26,8 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title">Machu Picchu</h1>
-        <p class="lead blog-description">AD 1438</p>
+        <h1 class="blog-title">The Seven Wonders of the World</h1>
+        <p class="lead blog-description">Pictures and descriptions of each of the seven wonders of the world.</p>
       </div>
 
       <div class="row">
@@ -37,7 +37,7 @@
             <h2 class="blog-post-title">Post Title</h2>
             <p class="blog-post-meta">November 25, 2014 by Anonymous</p>
           </div>
-        </div><!-- /.blog-main -->
+        </div><!-- /.blog-main http://nmazour96.github.io/blog.  -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
@@ -47,8 +47,8 @@
           <div class="sidebar-module">
             <h4>Archives</h4>
             <ol class="list-unstyled">
-              <li><a href="pictures.html">Pictures</a></li>
-              <li><a href="facts.html">Facts</a></li>
+              <li><a href="#">Pictures</a></li>
+              <li><a href="#">Facts</a></li>
             </ol>
           </div>
           <div class="sidebar-module">
