--- a/wonderOne.html
+++ b/wonderOne.html
@@ -78,12 +78,13 @@
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
-            <p>A <em>blog</em>.</p>
+            <p>A blog about the Seven Wonders of the World.</p>
           </div>
           <div class="sidebar-module">
             <h4>Archives</h4>
             <ol class="list-unstyled">
-              <li><a href="#">Pictures</a></li>
+              <li><a href="pictures.html">Pictures</a></li>
+              <li><a href="facts.html">Facts</a></li>
             </ol>
           </div>
           <div class="sidebar-module">
