added picture archive and started facts archive

--- a/facts.html
+++ b/facts.html
@@ -34,9 +34,14 @@
 
         <div class="col-sm-8 blog-main">
           <div class="blog-post">
-            <h2 class="blog-post-title">Post Title</h2>
-            <p class="blog-post-meta">November 25, 2014 by Anonymous</p>
+            <h2 class="blog-post-title">Christ Redeemer Facts</h2>
+            <p class="blog-post-meta">#1: Located in Rio de Janeiro, Brazil.</p>
+            <p class="blog-post-meta">#2: It is 98 feet tall (not including the 26 foot pedestal), and the arms stretch to 92 feet wide.</p>
+            <p class="blog-post-meta">#3: The statue weighs approximately 635 tons. </p>
+            <p class="blog-post-meta">#4: It is the 5th largest statue of Jesus.</p>
+            <p class="blog-post-meta">#5: The cost in 1931 was approximately $250,000 US. Today that would roughly be the equivalent of $3.2 million US.</p>
           </div>
+          <div class="line-separator"></div>
         </div><!-- /.blog-main http://nmazour96.github.io/blog.  -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
