--- a/facts.html
+++ b/facts.html
@@ -26,8 +26,8 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title">The Seven Wonders of the World</h1>
-        <p class="lead blog-description">Pictures and descriptions of each of the seven wonders of the world.</p>
+        <h1 class="blog-title">Facts</h1>
+        <p class="lead blog-description">Facts about all seven wonders.</p>
       </div>
 
       <div class="row">
