added hrefs to facts page

--- a/facts.html
+++ b/facts.html
@@ -52,8 +52,8 @@
           <div class="sidebar-module">
             <h4>Archives</h4>
             <ol class="list-unstyled">
-              <li><a href="#">Pictures</a></li>
-              <li><a href="#">Facts</a></li>
+              <li><a href="pictures.html">Pictures</a></li>
+              <li><a href="facts.html">Facts</a></li>
             </ol>
           </div>
           <div class="sidebar-module">
