deleted random text and finished facts archive

--- a/facts.html
+++ b/facts.html
@@ -42,6 +42,42 @@
             <p class="blog-post-meta">#5: The cost in 1931 was approximately $250,000 US. Today that would roughly be the equivalent of $3.2 million US.</p>
           </div>
           <div class="line-separator"></div>
+          <div class="blog-post">
+            <h2 class="blog-post-title">Great Wall of China Facts</h2>
+            <p class="blog-post-meta">#1: The world's longest wall and biggest ancient architecture.</p>
+            <p class="blog-post-meta">#2: The labor force to build the Great Wall includes soldiers, forcibly recruited peasants, convicts and war prisoners.</p>
+            <p class="blog-post-meta">#3: During the Cultural Revolution (1966-1976), many bricks of the Great Wall were taken away to use in building homes, farms or reservoirs.</p>
+            <p class="blog-post-meta">#4: Its purpose was to defend the Chinese Empire from Mongolian and Manchu enemies to the north.</p>
+            <p class="blog-post-meta">#5: Contrary to common belief, the Great Wall of China cannot be seen from space without aid.</p>
+          </div>
+          <div class="line-separator"></div>
+          <div class="blog-post">
+            <h2 class="blog-post-title">Petra Facts</h2>
+            <p class="blog-post-meta">#1: Petra is home to over 800 carved tombs.</p>
+            <p class="blog-post-meta">#2: The city was first established in 312 BC; making it one of the oldest metropolises in the world.</p>
+            <p class="blog-post-meta">#3: It is in Petra that King Aretas called for the arrest of the biblian Apostle Paul after he was converted into Christianity.</p>
+            <p class="blog-post-meta">#4: Among the most popular monuments in Petra is the 2,100-pound sandstone bust of Dushara, Petra’s primary male deity.</p>
+            <p class="blog-post-meta">#5: Among the Petra's amazing architecture, The Treasury is the most popular. It is estimated to be over 2,000 years.</p>
+          </div>
+          <div class="line-separator"></div>
+          <div class="blog-post">
+            <h2 class="blog-post-title">Colosseum Facts</h2>
+            <p class="blog-post-meta">#1: The Colosseum has remained the largest amphitheater in the world.</p>
+            <p class="blog-post-meta">#2: The Colosseum in Rome has over 80 entrances and can accommodate about 50,000 spectators.</p>
+            <p class="blog-post-meta">#3: It is thought that over 500,000 people lost their lives and over a million wild animals were killed throughout the duration of the Colosseum hosted people vs. beast games.</p>
+            <p class="blog-post-meta">#4: All Ancient Romans had free entry to the Colosseum for events, and were also fed throughout the show.</p>
+            <p class="blog-post-meta">#5: The Colosseum in Italy only took 9 years to build using over 60,000 Jewish slaves.</p>
+          </div>
+          <div class="line-separator"></div>
+          <div class="blog-post">
+            <h2 class="blog-post-title">Taj Mahal Facts</h2>
+            <p class="blog-post-meta">#1: It is estimated to have taken more than 22,000 people to build this impressive building including labourers, painters, stonecutters, embroidery artists, and many others.</p>
+            <p class="blog-post-meta">#2: According to legend it is believed that Emperor Shah Jahan had planned to construct another Taj Mahal in black marble on the other side of the river but the war with his sons interrupted his plans.</p>
+            <p class="blog-post-meta">#3: The Taj Mahal takes on different colouring at different times of the day, from a pinkish hue in the morning, milky white in the evening and golden at night when lit by the moon. They say the changing colour resembles the changing mood of females - in particular the Emperor's queen.</p>
+            <p class="blog-post-meta">#4: Built in memory of the Emperors third and most favourite wife Mumtāz Mahal, the Taj Mahal took 17 years to be completed.</p>
+            <p class="blog-post-meta">#5: It is said that the death so crushed the Emperor that all his hair and beard were said to have grown snow white within just a few months.</p>
+          </div>
+          <div class="line-separator"></div>
         </div><!-- /.blog-main http://nmazour96.github.io/blog.  -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
