added quiz element

--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,7 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="index.html" id="main"><strong>Main Page</strong></a>
+          <a class="blog-nav-item" href="index.html" id="main"><strong>Main Page</strong></a>
           <a class="blog-nav-item" href="wonderOne.html" id="wonderOne">Wonder #1</a>
           <a class="blog-nav-item" href="wonderTwo.html" id="wonderTwo">Wonder #2</a>
           <a class="blog-nav-item" href="wonderThree.html" id="wonderThree">Wonder #3</a>
@@ -26,16 +26,25 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title">The Seven Wonders of the World</h1>
-        <p class="lead blog-description">Pictures and descriptions of each of the seven wonders of the world.</p>
+        <h1 class="blog-title">The Seven Wonders of the World Quiz</h1>
+        <p class="lead blog-description">Questions over the information in this blog.</p>
       </div>
 
       <div class="row">
 
         <div class="col-sm-8 blog-main">
           <div class="blog-post">
-            <h2 class="blog-post-title">Post Title</h2>
-            <p class="blog-post-meta">November 25, 2014 by Anonymous</p>
+            <h2 class="blog-post-title" id="question"></h2>
+            <div class="options">
+              <button id="one"></button>
+              <button id="two"></button>
+              <button id="three"></button>
+              <button id="four"></button>
+              <button id="five"></button>
+              <button id="six"></button>
+              <button id="seven"></button>
+            </div>
+            <p id="answer"></p>
           </div>
         </div><!-- /.blog-main http://nmazour96.github.io/blog.  -->
 
