--- a/wonderFive.html
+++ b/wonderFive.html
@@ -43,18 +43,19 @@
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
             <p>A blog about the Seven Wonders of the World.</p>
-            <li><a href="facts.html">Facts</a></li>
           </div>
           <div class="sidebar-module">
             <h4>Archives</h4>
             <ol class="list-unstyled">
               <li><a href="pictures.html">Pictures</a></li>
+              <li><a href="facts.html">Facts</a></li>
             </ol>
           </div>
           <div class="sidebar-module">
             <h4>Links</h4>
             <ol class="list-unstyled">
               <li><a href="http://www.github.com">GitHub</a></li>
+              <li><a id="quizLink" href="quiz.html">Seven Wonders Quiz</a></li>
             </ol>
           </div>
         </div><!-- /.blog-sidebar -->
