--- a/wonderSeven.html
+++ b/wonderSeven.html
@@ -26,7 +26,7 @@
     <div class="container">
 
       <div class="blog-header">
-        <h1 class="blog-title">Tah Mahal</h1>
+        <h1 class="blog-title">Taj Mahal</h1>
         <p class="lead blog-description">AD 1632</p>
       </div>
 
