Added wonders five and six to home page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
           	<img src="http://upload.wikimedia.org/wikipedia/commons/5/53/Colosseum_in_Rome,_Italy_-_April_2007.jpg" alt="colosseum at night">
           </div>
           <div class="line-separator"></div>
+          <h2 class="blog-post-title">Chichen Itza</h2>
+            <p class="blog-post-meta">Chichen Itza also means ‘at the mouth of the well of the Itza'.</p>
+          </div>
+          <div class="image">
+          	<img src="http://upload.wikimedia.org/wikipedia/commons/5/51/Chichen_Itza_3.jpg" alt="ChichenItzaOne">
+          </div>
+          <div class="line-separator"></div>
+           <div class="blog-post">
+          <h2 class="blog-post-title">Machu Picchu</h2>
+            <p class="blog-post-meta">It is believed that no wheel was used to transport heavy rocks for the construction of the city.</p>
+          </div>
+          <div class="image">
+          	<img src="http://upload.wikimedia.org/wikipedia/commons/7/7e/Machu_Picchu_early_morning.JPG" alt="MP1">
+          </div>
+          <div class="line-separator"></div>
           <div class="blog-post">
             <h2 class="blog-post-title">Taj Mahal</h2>
             <p class="blog-post-meta">It is estimated to have taken more than 22,000 people to build this impressive building including labourers, painters, stonecutters, embroidery artists, and many others.</p>
