corrected one line of code

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           	<img src="http://upload.wikimedia.org/wikipedia/commons/5/53/Colosseum_in_Rome,_Italy_-_April_2007.jpg" alt="colosseum at night">
           </div>
           <div class="line-separator"></div>
+          <div class="blog-post">
           <h2 class="blog-post-title">Chichen Itza</h2>
             <p class="blog-post-meta">Chichen Itza also means ‘at the mouth of the well of the Itza'.</p>
           </div>
