fixed counter html

--- a/wonderFour.html
+++ b/wonderFour.html
@@ -93,11 +93,12 @@
               <li><a href="http://www.github.com">GitHub</a></li>
             </ol>
           </div>
-              <div class="sidebar-module">
+            <div class="sidebar-module">
             <h4>Number of clicks on this page</h4>
-            <ol class="list-unstyled">
-              <div id="NumberOfClicks" 
-            </div></ol>
+              <ol class="list-unstyled">
+                <div id="NumberOfClicks"> 
+                </div>
+              </ol>
           </div>
         </div><!-- /.blog-sidebar -->
 
