changed div to p

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           <div class="sidebar-module">
             <h4>Number of clicks on this page</h4>
               <ol class="list-unstyled">
-                <div id="NumberOfClicks"> 
-                </div>
+                <p id="NumberOfClicks"> 
+                </p>
               </ol>
           </div>
         </div><!-- /.blog-sidebar -->
