changed div to span

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           <div class="sidebar-module">
             <h4>Number of clicks on this page</h4>
               <ol class="list-unstyled">
-                <p id="NumberOfClicks"> 
-                </p>
+                <span id="NumberOfClicks"> 
+                </span>
               </ol>
           </div>
         </div><!-- /.blog-sidebar -->
