--- a/wonderOne.html
+++ b/wonderOne.html
@@ -94,10 +94,11 @@
             </ol>
           </div>
           <div class="sidebar-module">
+          <div class="sidebar-module">
             <h4>Number of clicks on this page</h4>
               <ol class="list-unstyled">
-                <div id="NumberOfClicks"> 
-                </div>
+                <span id="NumberOfClicks"> 
+                </span>
               </ol>
           </div>
         </div><!-- /.blog-sidebar -->
