--- a/wonderTwo.html
+++ b/wonderTwo.html
@@ -93,11 +93,11 @@
               <li><a href="http://www.github.com">GitHub</a></li>
             </ol>
           </div>
-            <div class="sidebar-module">
+          <div class="sidebar-module">
             <h4>Number of clicks on this page</h4>
               <ol class="list-unstyled">
-                <div id="NumberOfClicks"> 
-                </div>
+                <span id="NumberOfClicks"> 
+                </span>
               </ol>
           </div>
         </div><!-- /.blog-sidebar -->
