got rid of ol element

--- a/index.html
+++ b/index.html
@@ -111,10 +111,7 @@
           </div>
           <div class="sidebar-module">
             <h4>Number of clicks on this page</h4>
-              <ol class="list-unstyled">
-                <span id="NumberOfClicks"> 
-                </span>
-              </ol>
+                <span id="NumberOfClicks"></span>
           </div>
         </div><!-- /.blog-sidebar -->
 
