--- a/wonderOne.html
+++ b/wonderOne.html
@@ -94,12 +94,8 @@
             </ol>
           </div>
           <div class="sidebar-module">
-          <div class="sidebar-module">
             <h4>Number of clicks on this page</h4>
-              <ol class="list-unstyled">
-                <span id="NumberOfClicks"> 
-                </span>
-              </ol>
+                <span id="NumberOfClicks"></span>
           </div>
         </div><!-- /.blog-sidebar -->
 
