--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
           <div class="sidebar-module">
             <h4>Number of clicks on this page</h4>
-                <span id="numberOfClicks"></span>
+                <span id="NumberOfClicks"></span>
           </div>
         </div><!-- /.blog-sidebar -->
 
