Added wonders five and six to facts page

--- a/facts.html
+++ b/facts.html
@@ -69,6 +69,24 @@
             <p class="blog-post-meta">#5: The Colosseum in Italy only took 9 years to build using over 60,000 Jewish slaves.</p>
           </div>
           <div class="line-separator"></div>
+            <div class="blog-post">
+            <h2 class="blog-post-title">Chichen Itza Facts</h2>
+            <p class="blog-post-meta">#1: Chichen Itza also means ‘at the mouth of the well of the Itza'.</p>
+            <p class="blog-post-meta">#2: Chichen Itza may have been built where it was because of the location of two large natural sink holes nearby that would have provided water year-round.</p>
+            <p class="blog-post-meta">#3: One of these sink holes was thought to have been used as a place of human sacrifice. These sacrifices were made in times of drought, and men, women and children would be thrown in the well as a sacrifice to the Chac God. The Chac God is the Maya God of rain and lightning and these sacrifices were done to end drought.</p>
+            <p class="blog-post-meta">#4: Approximately 1.2 million people visit the ruins of Chichen Itza every year.</p>
+            <p class="blog-post-meta">#5: Mayan sports included a game with a soccer-sized ball that had its own intricate rules and provided exciting competition for huge crowds of spectators.</p>
+          </div>
+          <div class="line-separator"></div>
+            <div class="blog-post">
+            <h2 class="blog-post-title">Machu Picchu</h2>
+            <p class="blog-post-meta">#1: It is believed that no wheel was used to transport heavy rocks for the construction of the city.</p>
+            <p class="blog-post-meta">#2: The structures were built with a technique called “ashlar”, stones that are cut to fit together without mortar that not even a needle can fit in between the stones.</p>
+            <p class="blog-post-meta">#3: In the Quechua native language, “Machu Picchu” means “Old Peak” or “Old Mountain.”</p>
+            <p class="blog-post-meta">#4: The citadel is divided in two parts: Hanan and Urin according with the Inca tradition.</p>
+            <p class="blog-post-meta">#5: Many of the porters will sleep with a shiny metal object or mirror beneath them when they are on the trail. They believe it sends away spirits coming up through the earth and whisking them away. Ask any guide or porter, and most will tell you that sometimes they have experienced the feeling of being pulled out of their tents by spirits of the past.</p>
+          </div>
+          <div class="line-separator"></div>
           <div class="blog-post">
           <h2 class="blog-post-title">Fact #1</h2>
             <p class="blog-post-meta">It is believed that no wheel was used to transport heavy rocks for the construction of the city.</p>
