--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
               <li><a href="http://www.github.com">GitHub</a></li>
             </ol>
           </div>
+          <div class="sidebar-module">
+            <h4>Number of Page Views</h4>
+            <p id='mainCounter'></p>
+          </div>
         </div><!-- /.blog-sidebar -->
 
       </div><!-- /.row -->
