added text to display rating

--- a/wonderOne.html
+++ b/wonderOne.html
@@ -49,6 +49,7 @@
               <button id="starFourOneFC"><img class="star" src="http://pngimg.com/upload/star_PNG1592.png" alt="full star"></button>
               <button id="starFiveOneC"><img class="star" src="http://printerprojects.com/pictures/elements/largeoutlinestar.jpg" alt="blank star"></button>
               <button id="starFiveOneFC"><img class="star" src="http://pngimg.com/upload/star_PNG1592.png" alt="full star"></button>
+              <p class="blog-post-meta" id="ratingOneC"></p>
             </div>
           </div>
           <div class="line-separator"></div>
