added word "pictures"

--- a/pictures.html
+++ b/pictures.html
@@ -149,7 +149,7 @@
           </div>
           <div class="line-separator"></div>
            <div class="blog-post">
-            <h2 class="blog-post-title">Machu Picchu</h2>
+            <h2 class="blog-post-title">Machu Picchu Pictures</h2>
           </div>
           <div class="image">
           	<img src="http://upload.wikimedia.org/wikipedia/commons/7/7e/Machu_Picchu_early_morning.JPG" alt="MP1">
