--- a/wonderOne.html
+++ b/wonderOne.html
@@ -56,6 +56,7 @@
           <div class="blog-post">
             <h2 class="blog-post-title">Fact #3</h2>
             <p class="blog-post-meta">The statue weighs approximately 635 tons. </p>
+            <img src="http://assets.nydailynews.com/polopoly_fs/1.1583493!/img/httpImage/image.jpg_gen/derivatives/article_970/brazil-weather-rain.jpg" alt="christ redeemer lightning">
             <div class="small-separation"></div>
             <div class="thumbs">
               <button id="upThreeC"><img class="thumbsUp" src="http://www.clker.com/cliparts/2/7/d/5/1247117411176075605Symbol_thumbs_up.svg" alt="thumbs up"></button>
@@ -65,7 +66,7 @@
           <div class="blog-post">
             <h2 class="blog-post-title">Fact #4</h2>
             <p class="blog-post-meta">It is the 5th largest statue of Jesus.</p>
-            <img src="http://siliconindia.com:81/travelcity/images/special_images/c9h17kR45vzd38x.jpeg" alt="christ redeemer city">
+            <img src="http://a.abcnews.com/images/US/ABC_christ_redeemer_jef_140713_16x9_992.jpg" alt="christ redeemer city">
             <div class="small-separation"></div>
             <div class="thumbs">
               <button id="upFourC"><img class="thumbsUp" src="http://www.clker.com/cliparts/2/7/d/5/1247117411176075605Symbol_thumbs_up.svg" alt="thumbs up"></button>
