added picture gallery slideshow

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="sidebar-module">
             <h4>Archives</h4>
             <ol class="list-unstyled">
-              <li><a href="pictures.html">Pictures</a></li>
+              <li><a id="pictureLink" href="pictures.html">Pictures</a></li>
               <li><a href="facts.html">Facts</a></li>
             </ol>
           </div>
