--- a/pictures.html
+++ b/pictures.html
@@ -34,6 +34,7 @@
 
         <div class="col-sm-8 blog-main">
           <div class="blog-post">
+            <h2 class="blog-title" id="pictureTitle"></h2>
             <button id="next">NEXT</button>
             <div class="small-separation"></div>
             <div id="allPictures">
